[gd_scene load_steps=10 format=3 uid="uid://bofa62b7bi5st"]

[ext_resource type="Texture2D" uid="uid://dguoglfu7kd6t" path="res://gui/textures/mechanical_counter.png" id="1_4q2wk"]
[ext_resource type="Script" uid="uid://3mt08johftnk" path="res://gui/elements/mechanical_counter.gd" id="1_dv0ke"]
[ext_resource type="Theme" uid="uid://bmjyho5kycyl8" path="res://gui/fonts/libertine_bold_dark.tres" id="4_df2pp"]

[sub_resource type="Animation" id="Animation_2p2gw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mechanical_counter/TextureRect2/Control/label_right:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(18, -2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mechanical_counter/TextureRect2/Control/label_right_old:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(18, -32)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mechanical_counter/TextureRect2/Control/label_left_old:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("mechanical_counter/TextureRect2/Control/label_left:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -2)]
}

[sub_resource type="Animation" id="Animation_df2pp"]
resource_name = "left_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mechanical_counter/TextureRect2/Control/label_left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mechanical_counter/TextureRect2/Control/label_left_old:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, -2), Vector2(0, 28)]
}

[sub_resource type="Animation" id="Animation_gm31l"]
resource_name = "left_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mechanical_counter/TextureRect2/Control/label_left_old:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, -2), Vector2(0, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mechanical_counter/TextureRect2/Control/label_left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, 28), Vector2(0, -2)]
}

[sub_resource type="Animation" id="Animation_dv0ke"]
resource_name = "right_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mechanical_counter/TextureRect2/Control/label_right_old:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(18, -2), Vector2(18, 28)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mechanical_counter/TextureRect2/Control/label_right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(18, -32), Vector2(18, -2)]
}

[sub_resource type="Animation" id="Animation_c71gr"]
resource_name = "right_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mechanical_counter/TextureRect2/Control/label_right:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(18, 28), Vector2(18, -2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mechanical_counter/TextureRect2/Control/label_right_old:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(18, -2), Vector2(18, -32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2p2gw"]
_data = {
&"RESET": SubResource("Animation_2p2gw"),
&"left_down": SubResource("Animation_df2pp"),
&"left_up": SubResource("Animation_gm31l"),
&"right_down": SubResource("Animation_dv0ke"),
&"right_up": SubResource("Animation_c71gr")
}

[node name="mechanical_counter" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_dv0ke")

[node name="animation_player_left" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_2p2gw")
}

[node name="animation_player_right" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_2p2gw")
}

[node name="TextureRect2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(40, 33)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("1_4q2wk")
expand_mode = 1

[node name="Control" type="Control" parent="TextureRect2"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="label_left" type="Label" parent="TextureRect2/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -19.0
offset_right = 9.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_df2pp")
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="label_left_old" type="Label" parent="TextureRect2/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -49.0
offset_right = 9.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_df2pp")
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="label_right" type="Label" parent="TextureRect2/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -19.0
offset_right = 9.0
offset_bottom = 19.0
theme = ExtResource("4_df2pp")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="label_right_old" type="Label" parent="TextureRect2/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -49.0
offset_right = 9.0
offset_bottom = -11.0
theme = ExtResource("4_df2pp")
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true
